<resources>
    <string name="app_name">A Computer Engineer</string>

    <string name="str_pick_image">Pick Image From Gallery</string>
    <string name="str_pick_image_resize">Pick Image From Gallery And Resize</string>
    <string name="str_select_image">Select Picture</string>
    <string name="str_no_image">no image selected</string>
    <string name="str_image_path">image path</string>
    <string name="str_image_google_drive">image from Google Drive</string>
    <string name="str_add_text">Add Text To Canvas</string>
    <string name="str_save_image">Save Image</string>
    <string name="str_maximum_size">Enter Maximum Size</string>
    <string name="str_share_image">Share Image(Default)</string>
    <string name="str_share_image_whatsapp">Share Image(Only Whatsapp)</string>
    <string name="str_bnv_tab1">Tab 1</string>
    <string name="str_bnv_tab2">Tab 2</string>
    <string name="str_bnv_tab3">Tab 3</string>
    <string name="login_note">Welcome! Please login.</string>
    <string name="welcome_note">Welcome %s!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_validation">Please enter username and password</string>

    <string name="act_canvas_demo">Canvas Demo</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="image">image</string>

    <string name="str_save_image_text">Your images has been saved in gallery at </string>
    <string name="enter_phone_number">Phone Number in +XX XXXXXXXXXX Format</string>
    <string name="open_in_whatsapp">Open Number in Whatsapp</string>
    <string name="your_hint_here">Your Hint Here</string>
</resources>
