<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acomputerengineer.ResizeImageDecodeBitmapActivity">

    <EditText
        android:id="@+id/et_maximum_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_maximum_size"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_pick_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_maximum_size"
        android:text="@string/str_pick_image" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/str_no_image" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_note"
        android:layout_below="@id/btn_pick_image"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter" />

</RelativeLayout>
