<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acomputerengineer.PickImageActivity">

    <Button
        android:id="@+id/btn_pick_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_pick_image"/>

    <TextView
        android:id="@+id/tv_image_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_no_image"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image"
        android:layout_above="@id/tv_image_path"
        android:layout_below="@id/btn_pick_image"/>

</RelativeLayout>
